--- a/src/app/views/Tutorial/Tutorial.scss
+++ b/src/app/views/Tutorial/Tutorial.scss
@@ -62,7 +62,7 @@
 
     &-right {
       grid-column-start: 2;
-      margin: 10rem auto auto 2rem;
+      margin: 10rem auto auto auto;
       display: flex;
       flex-direction: column;
 
